--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ bg black/70 backdrop-blur-md text-white z-50">
   <div class="container mx-auto flex items-center justify-between p-4">
     
     <!-- Logo -->
-    <a href="home.html" class="text-2xl font-extrabold tracking-wide">
+    <a href="index.html" class="text-2xl font-extrabold tracking-wide">
       EKSAM <span class="text-red-500">TINT</span>
     </a>
 
     <!-- Desktop Menu -->
     <nav class="hidden md:flex space-x-8 text-lg font-medium">
-      <a href="home.html" class="hover:text-red-500 transition">Home</a>
+      <a href="index.html" class="hover:text-red-500 transition">Home</a>
       <a href="about.html" class="hover:text-red-500 transition">About</a>
       <a href="gallery.html" class="hover:text-red-500 transition">Services</a>
       <a href="contact.html" class="hover:text-red-500 transition">Contact</a>
@@ -95,7 +95,7 @@ bg black/70 backdrop-blur-md text-white z-50">
 
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-black/90 text-white flex flex-col space-y-6 text-center py-6">
-    <a href="home.html" class="hover:text-red-500 transition">Home</a>
+    <a href="index.html" class="hover:text-red-500 transition">Home</a>
     <a href="about.html" class="hover:text-red-500 transition">About</a>
     <a href="gallery.html" class="hover:text-red-500 transition">Gallery</a>
     <a href="contact.html" class="hover:text-red-500 transition">Contact</a>
@@ -273,3 +273,4 @@ bg black/70 backdrop-blur-md text-white z-50">
   </script>
 </body>
 </html>
+
