--- a/booking.html
+++ b/booking.html
@@ -110,7 +110,7 @@
     <div class="text-center mt-6 text-gray-300">— OR —</div>
 
     <!-- WhatsApp Booking -->
-    <form action="https://wa.me/918667296566" method="get" target="_blank" class="max-w-2xl mx-auto mt-6">
+    <form action="https://wa.me/+447774093433" method="get" target="_blank" class="max-w-2xl mx-auto mt-6">
       <input type="hidden" name="text" value="Hello, I’d like to book an appointment at EKSAM TINT. Please confirm my slot.">
       <button type="submit" class="w-full py-3 bg-green-600 hover:bg-green-700 rounded-lg font-semibold transition">
         📲 Book via WhatsApp
@@ -118,7 +118,7 @@
     </form>
 
     <!-- SMS Booking -->
-    <form action="sms:8667296566" method="get" class="max-w-2xl mx-auto mt-4">
+    <form action="sms:+447774093433" method="get" class="max-w-2xl mx-auto mt-4">
       <input type="hidden" name="body" value="Hello, I’d like to book an appointment at EKSAM TINT. Please confirm my slot.">
       <button type="submit" class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded-lg font-semibold transition">
         📩 Book via SMS
@@ -136,4 +136,5 @@
 
 </body>
 </html>
+
 
