--- a/booking.html
+++ b/booking.html
@@ -45,8 +45,9 @@
   <section class="py-16 px-6 md:px-20">
     <h3 class="text-3xl md:text-4xl font-bold text-center mb-8 text-red-400">Fill Out the Form</h3>
     
-    <!-- Formspree Form -->
-    <form action="https://formspree.io/f/mwpnylpq" method="POST" class="max-w-2xl mx-auto bg-gray-900/80 p-8 rounded-2xl shadow-lg space-y-6 fade-in">
+    <!-- Booking Form -->
+    <form id="bookingForm" action="https://api.web3forms.com/submit" method="POST" class="max-w-2xl mx-auto bg-gray-900/80 p-8 rounded-2xl shadow-lg space-y-6 fade-in">
+      <input type="hidden" name="access_key" value="877bfeb6-8dce-4b84-a9f6-23c6d35fc948">
 
       <!-- Name -->
       <div>
@@ -100,31 +101,19 @@
         <textarea name="message" rows="4" class="w-full p-3 rounded-lg text-black focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Any special requests..."></textarea>
       </div>
 
-      <!-- Submit -->
-      <button type="submit" class="w-full py-3 bg-red-600 hover:bg-red-700 rounded-lg font-semibold transition">
-        ✅ Submit Booking (Email)
-      </button>
+      <!-- Submit Buttons -->
+      <div class="flex flex-col md:flex-row gap-4">
+        <button type="submit" class="w-full py-3 bg-red-600 hover:bg-red-700 rounded-lg font-semibold transition">
+          ✅ submit via  Email
+        </button>
+        <button type="button" onclick="sendToWhatsApp()" class="w-full py-3 bg-green-600 hover:bg-green-700 rounded-lg font-semibold transition">
+          📲 submit via  Whatsapp
+        </button>
+        <button type="button" onclick="sendToSMS()" class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded-lg font-semibold transition">
+          📩 submit via SMS
+        </button>
+      </div>
     </form>
-
-    <!-- OR -->
-    <div class="text-center mt-6 text-gray-300">— OR —</div>
-
-    <!-- WhatsApp Booking -->
-    <form action="https://wa.me/447774093433" method="get" target="_blank" class="max-w-2xl mx-auto mt-6">
-      <input type="hidden" name="text" value="Hello, I’d like to book an appointment at EKSAM TINT. Please confirm my slot.">
-      <button type="submit" class="w-full py-3 bg-green-600 hover:bg-green-700 rounded-lg font-semibold transition">
-        📲 Book via WhatsApp
-      </button>
-    </form>
-
-    <!-- SMS Booking -->
-    <form action="sms:447774093433" method="get" class="max-w-2xl mx-auto mt-4">
-      <input type="hidden" name="body" value="Hello, I’d like to book an appointment at EKSAM TINT. Please confirm my slot.">
-      <button type="submit" class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded-lg font-semibold transition">
-        📩 Book via SMS
-      </button>
-    </form>
-
   </section>
 
   <!-- Back Button -->
@@ -134,8 +123,72 @@
     </a>
   </section>
 
-</body>
-</html>
+  <!-- JavaScript -->
+  <script>
+  function getFormData() {
+    return {
+      name: document.querySelector('input[name="name"]').value.trim(),
+      email: document.querySelector('input[name="email"]').value.trim(),
+      date: document.querySelector('input[name="date"]').value.trim(),
+      time: document.querySelector('select[name="time"]').value.trim(),
+      service: document.querySelector('select[name="service"]').value.trim(),
+      message: document.querySelector('textarea[name="message"]').value.trim()
+    };
+  }
 
+  // ✅ Send Email via Web3Forms
+  function sendToEmail() {
+    let form = document.getElementById("bookingForm");
+    let formData = new FormData(form);
 
+    fetch("https://api.web3forms.com/submit", {
+      method: "POST",
+      body: formData
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (data.success) {
+        console.log("✅ Booking sent to Email!");
+      } else {
+        console.log("❌ Failed to send Email!");
+      }
+    })
+    .catch(err => console.error("⚠ Error: " + err));
+  }
 
+  // ✅ WhatsApp + Email
+  function sendToWhatsApp() {
+    let data = getFormData();
+    sendToEmail(); // also send email
+
+    let phone = "447774093433"; 
+    let text = `📌 New Booking Request:
+👤 Name: ${data.name}
+✉ Email: ${data.email}
+📅 Date: ${data.date}
+⏰ Time: ${data.time}
+🛠 Service: ${data.service}
+💬 Message: ${data.message}`;
+
+    let url = "https://wa.me/" + phone + "?text=" + encodeURIComponent(text);
+    window.open(url, '_blank');
+  }
+
+  // ✅ SMS + Email
+  function sendToSMS() {
+    let data = getFormData();
+    sendToEmail(); // also send email
+
+    let phone = "447774093433"; 
+    let text = `New Booking Request:
+Name: ${data.name}
+Email: ${data.email}
+Date: ${data.date}
+Time: ${data.time}
+Service: ${data.service}
+Message: ${data.message}`;
+
+    let url = "sms:" + phone + "?body=" + encodeURIComponent(text);
+    window.open(url, '_blank');
+  }
+</script>
