--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         <h2 class="text-5xl font-bold mb-6">Contact Us</h2>
         <p class="text-gray-300 mb-4">📍 33 Grasmere Road, Luton LU3 2DT</p>
         <p class="text-gray-300 mb-4">📞 +44 7774 093433</p>
-        <p class="text-gray-300 mb-4">✉ info@eksamtint.com</p>
+        <p class="text-gray-300 mb-4">✉ eksamtint@gmail.com</p>
       </div>
       <div data-aos="fade-left">
         <iframe src="https://www.google.com/maps?q=33+Grasmere+Road+Luton+LU3+2DT&output=embed"
@@ -112,4 +112,5 @@
   </script>
 
 </body>
+
 </html>
