--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ bg black/70 backdrop-blur-md text-white z-50">
 
     <!-- Dechrome -->
     <div class="min-w-[280px] bg-gray-900 p-6 rounded-2xl shadow-lg hover:scale-105 transition snap-center">
-      <img src="images/dechrome.png" alt="Dechrome" 
+      <img src="images/dechromes.png.jpg" alt="Dechrome" 
            class="w-full h-40 object-cover rounded-lg mb-4 border-2 border-red-500 shadow-[0_0_20px_#ff0000]">
       <h3 class="text-xl font-bold mb-2 text-red-400">Dechrome</h3>
       <p class="text-gray-300 text-sm">Gloss black trims for a premium finish.</p>
@@ -202,7 +202,7 @@ bg black/70 backdrop-blur-md text-white z-50">
 
     <!-- Chameleon Tint -->
     <div class="min-w-[280px] bg-gray-900 p-6 rounded-2xl shadow-lg hover:scale-105 transition snap-center">
-      <img src="images/Dechrome2.png" alt="Chameleon Tint" 
+      <img src="images/WhatsApp Image 2025-09-03 at 12.23.22_43048812.png.jpg" alt="Chameleon Tint" 
            class="w-full h-40 object-cover rounded-lg mb-4 border-2 border-red-500 shadow-[0_0_20px_#ff0000]">
       <h3 class="text-xl font-bold mb-2 text-red-400">Chameleon Tint</h3>
       <p class="text-gray-300 text-sm">Color-shifting glass tint for a unique luxury style.</p>
@@ -210,9 +210,9 @@ bg black/70 backdrop-blur-md text-white z-50">
 
     <!-- Window Screening -->
     <div class="min-w-[280px] bg-gray-900 p-6 rounded-2xl shadow-lg hover:scale-105 transition snap-center">
-      <img src="images/screening.png" alt="Window Screening" 
+      <img src="images/house.png.jpg" alt="Window Screening" 
            class="w-full h-40 object-cover rounded-lg mb-4 border-2 border-red-500 shadow-[0_0_20px_#ff0000]">
-      <h3 class="text-xl font-bold mb-2 text-red-400">Window Screening</h3>
+      <h3 class="text-xl font-bold mb-2 text-red-400">Window tint for house/office</h3>
       <p class="text-gray-300 text-sm">Heat reduction & UV protection for comfort & safety.</p>
     </div>
 
@@ -432,3 +432,4 @@ bg black/70 backdrop-blur-md text-white z-50">
   </script>
 </body>
 </html>
+
